--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
 
       <stateful-client>
+        <ai-player apm=300></ai-player>
         <game-lobby></game-lobby>
         <game-board width=20 height=20 color="white">
           <canvas class="boardCanvas" width=800 height=800
