preparing for adding AI clients to games

--- a/www/index.html
+++ b/www/index.html
@@ -6,31 +6,11 @@
   </head>
   <body>
     <script type="module" src="js/index.js"></script>
-    <div style="width: 100%; margin: auto">
+    <div id="container" style="width: 100%; margin: auto">
       <stateful-client>
+        <ai-player apm=100></ai-player>
         <game-lobby></game-lobby>
-        <game-board width=20 height=20 color="black">
-          <canvas class="boardCanvas" width=800 height=800
-            onclick="this.closest('game-board').canvasClick(event)"
-          />
-        </game-board>
-      </stateful-client>
-
-
-      <stateful-client>
-        <ai-player apm=30></ai-player>
-        <game-lobby></game-lobby>
-        <game-board width=20 height=20 color="white">
-          <canvas class="boardCanvas" width=800 height=800
-            onclick="this.closest('game-board').canvasClick(event)"
-          />
-        </game-board>
-      </stateful-client>
-
-      <stateful-client>
-        <ai-player apm=30></ai-player>
-        <game-lobby></game-lobby>
-        <game-board width=20 height=20 color="white">
+        <game-board>
           <canvas class="boardCanvas" width=800 height=800
             onclick="this.closest('game-board').canvasClick(event)"
           />
