get all game state shared, display scores

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
               onmouseup="this.closest('game-board').canvasMouseUp(event)"
             />
           </game-board>
+          <score-info screen="GAME" display="block"></score-info>
           <mana-info screen="GAME" display="block"></mana-info>
           <debug-info screen="GAME" display="block"></debug-info>
         </screen-router>
