--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Realtime Go</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/gorts/socket.io/socket.io.js"></script>
   </head>
   <body>
     <script type="module" src="js/index.js"></script>
